# Tokamak-AI-Layer

./: .gitignore  CLAUDE.md  Cargo.toml  DECK_PITCH.md  MARKETING.md  PROPOSAL.md  README.md
crates/agents/example-yield-agent/risc0-methods/: Cargo.toml
crates/agents/perp-trader/risc0-methods/: Cargo.toml
crates/protocol/kernel-core/: Cargo.toml
crates/protocol/kernel-core/src/: codec.rs  types.rs
crates/runtime/kernel-guest/: Cargo.toml
crates/sdk/kernel-sdk/: Cargo.toml
crates/sdk/kernel-sdk/src/: agent.rs  bytes.rs  types.rs
crates/testing/backtest/: Cargo.toml
crates/testing/backtest/src/: lib.rs
crates/testing/e2e-tests/: Cargo.toml
crates/testing/e2e-tests/src/: lib.rs  phase3_yield.rs
crates/testing/kernel-host-tests/: Cargo.toml
crates/testing/kernel-host-tests/src/: lib.rs
execution-kernel/: .gitignore  .gitmodules  Cargo.toml  DX_IMPROVEMENT_PLAN.md  README.md  package-lock.json
execution-kernel/contracts/: .env.example  foundry.toml
execution-kernel/contracts/script/: DeployDefiYieldAgent.s.sol  deploy-defi-yield-agent.sh
execution-kernel/contracts/src/: AgentRegistry.sol  KernelExecutionVerifier.sol  KernelOutputParser.sol  KernelVault.sol  MockYieldSource.sol  VaultCreationCodeStore.sol  VaultFactory.sol
execution-kernel/contracts/src/adapters/: HyperliquidAdapter.sol  TradingSubAccount.sol
execution-kernel/contracts/src/interfaces/: IAgentRegistry.sol  IERC20.sol  IExecutionGovernor.sol  IHyperliquidAdapter.sol  IKernelExecutionVerifier.sol  IPriceFeedAttestation.sol  IRiscZeroVerifier.sol  IVaultFactory.sol
execution-kernel/contracts/src/libraries/: OracleVerifier.sol
execution-kernel/contracts/test/: AgentRegistry.t.sol  ExecutionGovernor.t.sol  HyperliquidAdapter.t.sol  KernelExecutionVerifier.t.sol  KernelOutputParser.Conformance.t.sol  KernelVault.ExecutionSemantics.t.sol  KernelVault.SnapshotPPS.t.sol  KernelVault.t.sol  OracleVerifier.t.sol  PermissionlessIntegration.t.sol  PriceFeedAttestation.t.sol  VaultFactory.t.sol
execution-kernel/contracts/test/mocks/: MockCallTarget.sol  MockERC20.sol  MockKernelExecutionVerifier.sol  MockVerifier.sol
execution-kernel/crates/agent-pack/: Cargo.toml
execution-kernel/crates/agent-pack/src/: hash.rs  manifest.rs  pack.rs  scaffold.rs  verify.rs
execution-kernel/crates/agent-pack/tests/: hex_validation.rs  integration.rs
execution-kernel/crates/agents/perp-trader/: README.md  hyperliquid-bottlenecks.md  run-bot.sh
execution-kernel/crates/protocol/constraints/: Cargo.toml
execution-kernel/crates/reference-integrator/: Cargo.toml
execution-kernel/crates/reference-integrator/src/: input.rs  lib.rs  prove.rs  verify.rs
execution-kernel/crates/reference-integrator/tests/: integration.rs
execution-kernel/crates/runtime/risc0-methods/: build.rs
execution-kernel/crates/sdk/kernel-sdk/: Cargo.toml
execution-kernel/crates/testing/e2e-tests/: Cargo.toml  README.md
execution-kernel/crates/testing/kernel-host-tests/: Cargo.toml
execution-kernel/crates/tools/cargo-agent/: Cargo.toml
execution-kernel/docs/: COMPETITIVE_ANALYSIS.md  README.md  agent-pack.md  agent-pack.schema.json  agents.md  architecture.md  building-an-agent.md  docusaurus.config.ts  end-to-end-flow.md  package-lock.json  sidebars.ts
execution-kernel/docs/docs/: intro.md  quickstart.md
execution-kernel/docs/docs/agent-pack/: format.md  manifest-schema.md  publishing.md
execution-kernel/docs/docs/architecture/: cryptographic-chain.md  overview.md  trust-model.md
execution-kernel/docs/docs/cookbook/: custom-constraints.md  erc20-agent.md  multi-action-agent.md
execution-kernel/docs/docs/decisions/: 001-binding-elimination.md  002-agent-input-macro.md  003-cargo-agent-cli.md
execution-kernel/docs/docs/getting-started/: defi-yield-farmer.md  faq.md  local-build.md  prerequisites.md  run-an-example.md
execution-kernel/docs/docs/guest-program/: overview.md  risc0-build-pipeline.md  transcript-and-hashing.md
execution-kernel/docs/docs/integration/: golden-path.md  reference-integrator.md
execution-kernel/docs/docs/kernel/: input-format.md  journal-format.md
execution-kernel/docs/docs/onchain/: hyperliquid-integration.md  permissionless-system.md  security-considerations.md  verifier-overview.md
execution-kernel/docs/docs/reference/: glossary.md  repo-map.md
execution-kernel/docs/docs/sdk/: call-builder.md  constraints-and-commitments.md  overview.md  testing.md  writing-an-agent.md
execution-kernel/docs/integration/: reference-integrator.md
execution-kernel/docs/protocol/: action-types.md  onchain-policy.md
execution-kernel/docs/src/css/: custom.css
execution-kernel/frontend/: next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
execution-kernel/frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
execution-kernel/frontend/src/components/: AgentCard.tsx  CommentCard.tsx  CommentSection.tsx  CommentThread.tsx  ConnectWalletButton.tsx  ExecutionHistoryTable.tsx  ExecutionSubmitForm.tsx  ExecutionWorkflowDiagram.tsx  NetworkLogo.tsx  NetworkSelector.tsx  ProofGenerationPipeline.tsx  ProofVerifier.tsx  RegisterAgentForm.tsx  StatCard.tsx  VaultCard.tsx  VaultChart.tsx  VaultDepositForm.tsx  VaultWithdrawForm.tsx
execution-kernel/frontend/src/hooks/: useComments.ts  useKernelAgent.ts  useKernelVault.ts  useSiweAuth.ts  useVaultExecutions.ts  useVaultFactory.ts  useVaultHistory.ts  useVerifier.ts
execution-kernel/frontend/src/lib/: NetworkContext.tsx  chains.ts  contracts.ts  db.ts  session.ts  utils.ts  vaultErrors.ts  vaultEvents.ts
execution-kernel/sdk/: package.json
execution-kernel/sdk/src/: ExecutionKernelClient.ts  addresses.ts  index.ts  types.ts
execution-kernel/sdk/src/__tests__/: AgentRegistryClient.test.ts  ExecutionKernelClient.test.ts  KernelVaultClient.test.ts  VaultFactoryClient.test.ts  VerifierClient.test.ts  types.test.ts
execution-kernel/sdk/src/abi/: AgentRegistry.ts  KernelVault.ts  (+2 more)
execution-kernel/spec/: codec.md  e2e-tests.md  sdk.md
execution-kernel/tests/vectors/: kernel_input_v1.json
(+699 files in other folders)
