[workspace]
resolver = "2"
members = [
    # Protocol crates
    "crates/protocol/kernel-core",
    "crates/protocol/constraints",

    # SDK crates
    "crates/sdk/kernel-sdk",

    # Runtime crates (canonical, shared)
    "crates/runtime/kernel-guest",

    # Agent crates (self-contained: agent + binding + risc0-methods)
    "crates/agents/example-yield-agent/agent",
    "crates/agents/example-yield-agent/binding",
    "crates/agents/example-yield-agent/risc0-methods",
    "crates/agents/defi-yield-farmer/agent",
    "crates/agents/defi-yield-farmer/binding",
    "crates/agents/defi-yield-farmer/risc0-methods",

    # Testing crates
    "crates/testing/kernel-host-tests",
    "crates/testing/e2e-tests",

    # Tools
    "crates/agent-pack",
    "crates/reference-integrator",
]

[workspace.dependencies]
sha2 = { version = "0.10", default-features = false, features = [] }

[profile.release]
debug = 1
lto = true

[profile.dev]
opt-level = 1