[package]
name = "kernel-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Canonical Agent SDK for zkVM guest execution"
license = "Apache-2.0"

# This crate is designed for guest (zkVM) use only.
# It provides the minimal, stable interface for agent development.

[lib]
crate-type = ["rlib"]

[dependencies]
kernel-core = { path = "../../protocol/kernel-core", default-features = false }
constraints = { path = "../../protocol/constraints", optional = true }

[dev-dependencies]
# No dev dependencies - keep SDK minimal

[features]
default = []

# Marker feature for guest-specific code paths (e.g., risc0-zkvm shims)
guest = []

# Enable std for host-side testing (conditional no_std)
std = ["kernel-core/std"]

# Enable testing-only action types (ACTION_TYPE_ECHO) and testing module
testing = ["kernel-core/testing", "dep:constraints"]

[lints.clippy]
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
