[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"
description = "End-to-end zkVM proof tests for the execution kernel"
license = "Apache-2.0"
publish = false

# This crate contains only tests, no library
[lib]
path = "src/lib.rs"

[dependencies]
# Kernel crates for types and encoding
kernel-core = { path = "../../protocol/kernel-core" }
kernel-sdk = { path = "../../sdk/kernel-sdk" }
constraints = { path = "../../protocol/constraints" }

# Agent code hash for input construction
example-yield-agent = { path = "../../agents/example-yield-agent/agent" }
defi-yield-farmer = { path = "../../agents/defi-yield-farmer/agent", optional = true }

# Methods crate provides the guest ELF and IMAGE_ID
risc0-methods = { path = "../../agents/example-yield-agent/risc0-methods", optional = true }
risc0-methods-defi = { path = "../../agents/defi-yield-farmer/risc0-methods", optional = true }

# RISC Zero prover and verifier (host-side)
risc0-zkvm = { version = "3.0", default-features = false, optional = true }

# On-chain interaction dependencies (for phase3-e2e)
alloy = { version = "0.8", features = ["full"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
dotenvy = { version = "0.15", optional = true }

[dev-dependencies]
# Same dependencies for tests
kernel-core = { path = "../../protocol/kernel-core" }
kernel-sdk = { path = "../../sdk/kernel-sdk" }
constraints = { path = "../../protocol/constraints" }
example-yield-agent = { path = "../../agents/example-yield-agent/agent" }

[dependencies.hex]
version = "0.4"

[features]
default = []
# Enable this feature to run zkVM proof tests
# Requires RISC Zero toolchain installed
risc0-e2e = ["dep:risc0-methods", "dep:risc0-zkvm", "risc0-zkvm/prove"]

# Enable this feature to run Phase 3 E2E yield tests
# Requires RISC Zero toolchain + deployed contracts
phase3-e2e = [
    "dep:alloy",
    "dep:tokio",
    "dep:dotenvy",
    "risc0-e2e",
]

# Enable this feature for defi-yield-farmer E2E tests
defi-e2e = [
    "dep:defi-yield-farmer",
    "dep:risc0-methods-defi",
    "dep:risc0-zkvm",
    "risc0-zkvm/prove",
    "dep:alloy",
    "dep:tokio",
    "dep:dotenvy",
]
