[package]
name = "kernel-host-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel-core = { path = "../../protocol/kernel-core", features = ["std"] }
kernel-guest = { path = "../../runtime/kernel-guest" }
kernel-sdk = { path = "../../sdk/kernel-sdk" }
constraints = { path = "../../protocol/constraints" }
# Agent crates (generate kernel_main via agent_entrypoint! macro)
example-yield-agent = { path = "../../agents/example-yield-agent/agent" }
defi-yield-farmer = { path = "../../agents/defi-yield-farmer/agent" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
