[package]
name = "agent-pack"
version = "0.1.0"
edition = "2021"
description = "CLI tool for creating and verifying Agent Pack bundles"
license = "MIT OR Apache-2.0"

[[bin]]
name = "agent-pack"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { workspace = true }
hex = "0.4"
thiserror = "2"

# Optional: for IMAGE_ID computation
risc0-zkvm = { version = "3.0", optional = true, default-features = false }

# Optional: for on-chain verification
alloy = { version = "0.8", features = ["providers", "transports", "contract"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
risc0 = ["dep:risc0-zkvm"]
onchain = ["dep:alloy", "dep:tokio"]
