[package]
name = "perp-trader-risc0-methods"
version = "0.1.0"
edition = "2021"
description = "RISC Zero methods crate - builds perp-trader agent as zkVM guest and exports ELF/IMAGE_ID"
license = "Apache-2.0"

[build-dependencies]
risc0-build = { version = "3.0", default-features = false }

# Tell risc0-build which guest crate to build
# The path must be relative to this crate's directory
[package.metadata.risc0]
methods = ["zkvm-guest"]
