[package]
name = "perp-trader-host"
version = "0.1.0"
edition = "2021"
description = "Host-side orchestrator for perp-trader agent: fetch, build, prove, submit"
license = "Apache-2.0"

[[bin]]
name = "perp-host"
path = "src/main.rs"

[dependencies]
# Protocol crates
kernel-core = { path = "../../../protocol/kernel-core", features = ["std"] }
kernel-sdk = { path = "../../../sdk/kernel-sdk", features = ["std"] }
constraints = { path = "../../../protocol/constraints" }

# Agent crate (for output reconstruction)
perp-trader = { path = "../agent" }

# Reference integrator (for input building + proving)
reference-integrator = { path = "../../../reference-integrator" }

# Agent pack (bundle loading)
agent-pack = { path = "../../../agent-pack" }

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Hex encoding
hex = "0.4"

# Hashing
sha2 = "0.10"
sha3 = "0.10"

# Cryptography (for oracle signing)
k256 = { version = "0.13", features = ["ecdsa"] }

# Error handling
thiserror = "2"
anyhow = "1"

# On-chain (optional)
alloy = { version = "0.8", features = ["providers", "transports", "contract", "signer-local"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

# Proving (optional)
risc0-zkvm = { version = "3.0", optional = true, default-features = false, features = ["prove"] }

[features]
default = []
onchain = ["dep:alloy", "dep:tokio", "reference-integrator/onchain"]
prove = ["dep:risc0-zkvm", "reference-integrator/prove"]
full = ["onchain", "prove"]
