[package]
name = "kernel-guest-binding-defi-yield"
version = "0.1.0"
edition = "2021"
description = "Wrapper crate binding defi-yield-farmer to kernel-guest"
license = "Apache-2.0"

[lib]
crate-type = ["rlib"]

[dependencies]
kernel-guest = { path = "../../../runtime/kernel-guest" }
kernel-sdk = { path = "../../../sdk/kernel-sdk" }
kernel-core = { path = "../../../protocol/kernel-core", default-features = false }
constraints = { path = "../../../protocol/constraints" }
defi-yield-farmer = { path = "../../examples/defi-yield-farmer" }

[features]
default = []
risc0 = ["kernel-guest/risc0"]
